generate api key on user registration

--- a/src/apps/pyr_ex_web/lib/pyr_ex_web/templates/accounts/user/show.html.eex
+++ b/src/apps/pyr_ex_web/lib/pyr_ex_web/templates/accounts/user/show.html.eex
@@ -27,6 +27,13 @@
     <%= @user.intended_usage %>
   </li>
 
+  <%= if @key do %>
+    <li>
+      <strong>API key:</strong>
+      <%= @key %>
+    </li>
+  <% end %>
+
 </ul>
 
 <span><%= link "Edit", to: Routes.accounts_user_path(@conn, :edit, @user) %></span>
