change home page links

--- a/src/apps/pyr_ex_web/lib/pyr_ex_web/templates/home/index.html.eex
+++ b/src/apps/pyr_ex_web/lib/pyr_ex_web/templates/home/index.html.eex
@@ -22,13 +22,13 @@
     <h2>Help</h2>
     <ul>
       <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
+        <a href = "mailto: phoneyourrep@gmail.com">Email Us</a>
       </li>
       <li>
-        <a href="https://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on Freenode IRC</a>
+        <a href="https://github.com/phoneyourrep/pyr_ex/issues">GitHub Issues</a>
       </li>
       <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
+        <a href="https://twitter.com/phoneyourrep">Twitter</a>
       </li>
     </ul>
   </article>
